--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@ html, body, #root {
   height: 100%;
 }
 body {
-  background: #333;
+  background-image: linear-gradient(to right, #75e2e7, #244446 );
   margin: 0;
   display: grid;
   padding: 3em;
@@ -15,9 +15,15 @@ body {
   grid-template-rows: auto;
 }
 .box {
+  // width: 100%;
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  text-align: center;
+  background-image: linear-gradient(to bottom, rgb(248, 245, 248), pink, rgb(253, 186, 230) );
+  border-radius: 10% 5%;
+  border: groove;
+  line-height: 1;
+  margin: 2% 0;
   h1 {
     font-size: 20px;
     margin: 0 0 1rem 0;
@@ -35,15 +41,24 @@ body {
   }
 }
 .button {
-  background: hotpink;
+  background: rgb(4, 164, 212);
   border: 1px solid transparent;
   color: white;
+  margin: 1%;
   margin-right: 1em;
   padding: .25em .75em;
   transition: all .25s ease-in;
   &:hover {
     background: white;
-    border: 1px solid hotpink;
+    border: 1px solid rgb(105, 175, 255);
     color: #333;
   }
+}
+img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+h6{
+  font-size: 1.3rem;
 }
